js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-typeof-import.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
{
typeof
import
;
}
;
